--- a/ios/servisofts_chat.xcodeproj/xcshareddata/xcschemes/servisofts_chat.xcscheme
+++ b/ios/servisofts_chat.xcodeproj/xcshareddata/xcschemes/servisofts_chat.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "servisofts_chat.app"
-               BlueprintName = "servisofts_chat"
-               ReferencedContainer = "container:servisofts_chat.xcodeproj">
+               BuildableName = "template.app"
+               BlueprintName = "template"
+               ReferencedContainer = "container:template.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "servisofts_chatTests.xctest"
-               BlueprintName = "servisofts_chatTests"
-               ReferencedContainer = "container:servisofts_chat.xcodeproj">
+               BuildableName = "templateTests.xctest"
+               BlueprintName = "templateTests"
+               ReferencedContainer = "container:template.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "servisofts_chat.app"
-            BlueprintName = "servisofts_chat"
-            ReferencedContainer = "container:servisofts_chat.xcodeproj">
+            BuildableName = "template.app"
+            BlueprintName = "template"
+            ReferencedContainer = "container:template.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "servisofts_chat.app"
-            BlueprintName = "servisofts_chat"
-            ReferencedContainer = "container:servisofts_chat.xcodeproj">
+            BuildableName = "template.app"
+            BlueprintName = "template"
+            ReferencedContainer = "container:template.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
