--- a/ios/alvarosiles.xcodeproj/xcshareddata/xcschemes/servisofts_chat.xcscheme
+++ b/ios/alvarosiles.xcodeproj/xcshareddata/xcschemes/servisofts_chat.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "template.app"
-               BlueprintName = "template"
-               ReferencedContainer = "container:template.xcodeproj">
+               BuildableName = "alvarosiles.app"
+               BlueprintName = "alvarosiles"
+               ReferencedContainer = "container:alvarosiles.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "templateTests.xctest"
-               BlueprintName = "templateTests"
-               ReferencedContainer = "container:template.xcodeproj">
+               BuildableName = "alvarosilesTests.xctest"
+               BlueprintName = "alvarosilesTests"
+               ReferencedContainer = "container:alvarosiles.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "template.app"
-            BlueprintName = "template"
-            ReferencedContainer = "container:template.xcodeproj">
+            BuildableName = "alvarosiles.app"
+            BlueprintName = "alvarosiles"
+            ReferencedContainer = "container:alvarosiles.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "template.app"
-            BlueprintName = "template"
-            ReferencedContainer = "container:template.xcodeproj">
+            BuildableName = "alvarosiles.app"
+            BlueprintName = "alvarosiles"
+            ReferencedContainer = "container:alvarosiles.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
